fixtures/fmt/ok/pipeline_single.sans
# sans 0.1
datasource raw = csv("raw.csv")
table t = from(raw) do
	select a, b
end
