fixtures/fmt/bad/missing_end.sans
# sans 0.1
table t = from(raw) do
	select a
